Spacing and wording fixes

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -128,7 +128,7 @@ a:active, a:hover, a:focus {
   z-index: 2;
   left:50%;
   top:30%;
-  width: 333px;
+  width: 360px;
   text-align: center;
   transform: translatex(-50%);
   color: white;
